# rinha-backend-2026-rust

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.lb  Makefile  README.md  docker-compose.yml  info.json
api/: Cargo.toml
api/check_tokio_uring/: Cargo.toml
api/probe/: Cargo.toml
api/probe/src/: main.rs
api/src/: http.rs  ivf_index.rs  lib.rs  main.rs  parser.rs  response.rs  types.rs  vectorize.rs
docs/: tecnica.md
lb/: Makefile  lb.c
scripts/: official-test.sh
