[package]
name = "rinha-rust-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "rinha_rust_api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
libc = "0.2"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["io-util", "macros", "net", "rt"] }
tokio-uring = "0.5"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
